Update, ChoosePage.xaml Created, error fixing

--- a/TCC/TCC.csproj
+++ b/TCC/TCC.csproj
@@ -77,6 +77,12 @@
 	  <MauiXaml Update="Views\ChoicePage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	  <MauiXaml Update="Views\ChoosePageDriver.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="Views\ChoosePagePassenger.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="Views\DriverEditPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
