--- a/TCC/TCC.csproj
+++ b/TCC/TCC.csproj
@@ -83,6 +83,9 @@
 	  <MauiXaml Update="Views\ChoosePagePassenger.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	  <MauiXaml Update="Views\ConfigurarViagemPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="Views\DriverEditPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
