--- a/TCC/TCC.csproj
+++ b/TCC/TCC.csproj
@@ -62,6 +62,8 @@
 		<PackageReference Include="CommunityToolkit.Maui" Version="12.0.0" />
 		<PackageReference Include="CommunityToolkit.Maui.Core" Version="12.0.0" />
 		<PackageReference Include="CommunityToolkit.Mvvm" Version="8.4.0" />
+		<PackageReference Include="Esri.ArcGISRuntime.Maui" Version="200.8.0" />
+		<PackageReference Include="Esri.ArcGISRuntime.Toolkit.Maui" Version="200.8.0" />
 		<PackageReference Include="Microsoft.Maui.Controls" Version="9.0.70" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="9.0.5" />
 		<PackageReference Include="sqlite-net-pcl" Version="1.9.172" />
