ACABEI ESSA PORARA LIXO MERDA NÃO QUERO FVER ESSA MERDA DE TCCC NUMCA MAIS NA MINHA VIDA TCHAU FINALMENTE AME SÓ APRESENTEAR ESAS MERDA NEA FRESNTE DA GLR FLW TCHAU VIVA LIBERDADE ENFIM SOU FELIZ LETS BORA ESTATISTICA USP UHUL AMEM ASSIM ESPERO ESTOU LOCUO PAERDI AA SINIDADE FAZER DNOA ESA MERDA LKAJSDF LÇAKSDJFL.KASDJ FKOLÇASJD FOIPAWEJ OKIFJAWEIKLOFJ

--- a/TCC/TCC.csproj
+++ b/TCC/TCC.csproj
@@ -118,6 +118,9 @@
 	  <MauiXaml Update="Views\PassengerRegisterPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	  <MauiXaml Update="Views\UserProfilePage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="Views\ViagemPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
